# image-to-ascii

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pr-qa.yml
ascii_bg/: __init__.py  cli.py
ascii_bg/core/: __init__.py  character_sets.py  color_handler.py  converter.py  image_processor.py  renderer.py
tests/: __init__.py  test_character_sets.py  test_cli.py  test_color_handler.py  test_converter.py  test_image_processor.py  test_placeholder.py
